--- a/Temp.css
+++ b/Temp.css
@@ -11,6 +11,7 @@ body
     width: 4in;
     height: 2in;
     margin:0.8in;
+    margin-left:1.5in;
     padding:0.8in;
     padding-top:2in;
     color: azure;
@@ -32,8 +33,8 @@ body
     height:0.5in;
     background-color:#5D54A3;
     border-radius:9px;
-    margin-top:0.5in;
-    padding-top:0.5px;
+    margin-top:1.3in;
+    padding-top:1px;
     color:#E3E3F4;
     font-family:sans-serif;
     font-size:small;
