--- a/dark_lp/style.css
+++ b/dark_lp/style.css
@@ -1,6 +1,5 @@
 body
 {
-    max-width:95vw;
     background-color:#1C2230;
     display:flex;
     flex-direction:column;
@@ -42,21 +41,18 @@ body
 {
     display:flex;
     flex-direction:column;
+    min-width:360px;
     max-width:90vw;
     max-height:200vh;
     margin:5vw;
     justify-content:start;
     align-items:center;
 }
- .intro_pic
-{
-    min-width:40vw;
-    max-height:50vh;
-    
-}
 .intro_pic img
 {
-    max-width:60vw;
+    
+    min-width:360px;
+    max-width:90vw;
     max-height:50vh;
 }
 .intro_text
@@ -65,7 +61,7 @@ body
     display:flex;
     flex-direction:column;
     min-width:380px;
-    max-width:60vw;
+    max-width:50vw;
     max-height:60vh;
 }
 .heading
@@ -105,26 +101,28 @@ body
 }
 .advantages
 {
+    
     display:flex;
     flex-wrap:wrap;
     justify-content:space-evenly;
     max-width:100vw;
-    height: 140vh;
+    max-height: 140vh;
     margin: 1% 5%;
 }
 .grid
 {
-    min-width:320px;
+    /* border:2px solid white; */
+    min-width:370px;
     max-width:45%;
-    height:28vh;
-    margin:5% 2%;
+    max-height:28vh;
+    margin:7% 2%;
 }
 .grid_logo
 {
 
     max-width:60px;
     height:50px;
-    margin-left:40%;
+    margin-left:45%;
     margin-right:45%;
 }
 .grid_heading
@@ -138,7 +136,7 @@ body
 }
 .grid_text
 {
-    min-width:320px;
+    min-width:370px;
     max-width:30vw;
     color:white ;
     height:20vh;
