--- a/dark_lp/dark_lp/style.css
+++ b/dark_lp/dark_lp/style.css
@@ -1,8 +1,16 @@
+
 body
 {
     background-color:#1C2230;
     display:flex;
     flex-direction:column;
+}
+.curve
+{
+    z-index:1;
+    position:absolute;
+    margin-top:40vh;
+    min-width: 380px;
 }
 .navbar
 {
@@ -10,7 +18,7 @@ body
     justify-content:space-between;
     width:90vw;
     max-height:15vh;
-    margin-top:20px;
+    margin-top:30px;
 }
 .navbar img
 {
@@ -39,6 +47,7 @@ body
 
 .Brief_intro
 {
+    z-index:2;
     display:flex;
     flex-direction:column;
     min-width:360px;
@@ -106,12 +115,11 @@ body
     flex-wrap:wrap;
     justify-content:space-evenly;
     max-width:100vw;
-    max-height: 140vh;
+    max-height: 160vh;
     margin: 1% 5%;
 }
 .grid
 {
-    /* border:2px solid white; */
     min-width:370px;
     max-width:45%;
     max-height:28vh;
@@ -145,4 +153,206 @@ body
     font-size:small;
     font-weight:400;
     text-align:center;
+}
+.productive
+{
+    
+    display:flex;
+    flex-wrap:wrap;
+    min-width:370px;
+    max-width: 90vw;
+    max-height:80vh;
+    margin:3%;
+
+}
+.prod_img
+{
+    min-width:360px;
+    max-width:50vw;
+    max-height:80vh;
+}
+.prod_Text
+{
+    margin-top:5%;
+    min-width:370px;
+    max-width:35vw;
+    height:60vh;
+}
+.align
+{
+    text-align:left;
+}
+.working
+{
+    color:#54C9C7;
+    text-decoration:underline;
+    text-underline-offset:5px;
+} 
+.quotes
+{
+    position:absolute;
+}
+.profile
+{
+    display:grid;
+    min-width:300px;
+    max-width:90vw;
+    max-height:150vh;
+    gap:5vh 9vw;
+    grid-template-columns:20vw 20vw 20vw;
+    margin:7% 3%;
+}
+.prof_grid
+{
+    z-index:2;
+    margin-top:4vh;
+    padding:10%;
+    min-width:300px;
+    width:20vw;
+    max-height:60vh;
+    border-radius:10px;
+    border:1px solid #21293C;
+    background-color:#21293C;
+}
+.profile_pic
+{
+
+    margin-right:20px;
+    max-width:50px;
+    max-height:50px;
+    border-radius:50%;
+}
+.prof_about
+{
+    display:flex;
+    min-width:250px;
+    max-height:10vh;
+    margin-top:7%;
+}
+.info
+{
+    
+    min-width:200px;
+    max-height:10vh;
+}
+.bold
+{
+    font-weight:bold;
+} 
+.early_access
+{
+    display:flex;
+    position:absolute;
+    flex-direction:column;
+    justify-content:start;
+    align-items:center;
+    margin-top:380vh;
+    margin-left:15vw;
+    min-width:350px;
+    width:70vw;
+    height:50vh;
+    background-color:#21293C;
+}
+.accessText
+{
+    min-width:320px;
+    max-width:50vw;
+    margin-bottom:5vh;
+}
+.email input
+{
+    min-width:300px;
+    max-width:40vw;
+    height:8vh;
+    text-align:center;
+    border-radius:40px;
+    border-color:white;
+
+}
+.grey
+{
+    color:#727983;
+}
+.Free_trial
+{
+    height:5vh;
+    min-width:300px;
+    max-width:20vw;
+    text-align:center;
+    padding-top:2.5vh;
+    border-radius:40px;
+    background-color:#43B6D4;
+}
+.Free_trial:hover
+{
+    background-color: #33a4c4;
+}
+.footer
+{
+    min-width:350px;
+    max-height:140vh;
+    margin-top:35vh;
+    background-color:#0C1524;
+}
+.outer
+{
+    padding-left:5vw;
+    min-width:350px;
+    max-width:100vw;
+    max-height:140vh;
+    display:grid;
+    margin-top:30vh;
+    grid-template-columns:30vw 15vw 15vw 15vw 20vw;
+}
+.marg
+{
+    margin-top:7vh;
+}
+.know
+{
+    margin-top:5vh;
+    text-align:left;
+}
+.favicon
+{
+    padding-left:120px;
+}
+.favicon img
+{
+    max-width:15px;
+    max-height:15px;
+    padding:7px;
+    margin: 2px;
+    filter:invert(100%);
+    border-radius:50%;
+    border-color: black;
+    border-style: solid;
+    border-width:1px;
+}
+.favicon img:hover
+{
+    filter:invert(0%);
+    background-color:black;
+}
+
+@media only screen and (max-width:486px)
+{
+    .prod_head
+    {
+        font-size:larger;
+    }
+    .profile
+    {
+        grid-template-columns:auto;
+    }
+    .early_access
+    {
+        margin-left:5vw;
+        margin-top:445vh;
+    }
+    .outer
+    {
+        grid-template-columns: auto;
+    }
+
 }
